--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="font-family: 'Indie Flower', cursive;" id="root"></div>
+    <div style="font-family: 'Indie Flower', cursive !important;" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
